fix contrast color for improving accesibility on the breadcrumb section

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,13 @@
   box-shadow: 0px 4px 4px 1px rgba(21, 112, 177, 0.5)
 }
 
+/* styles/global.css (o el archivo CSS que uses para estilos globales) */
+.gradient-section-bg {
+  background: linear-gradient(to bottom, #E7E7E7 1%, #ffffff 99%);
+}
+
+
+
 .layout_screen {
   min-height: calc(100vh - 96px);
 }
